# seekr

./: CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  justfile  plugins.json
.github/ISSUE_TEMPLATE/: -scope---bug-report.md  -scope---feature-request.md  bug_report.md
.github/workflows/: CI.yml  publish-core.yml
defaults/: style.css
fplug/: LICENSE.txt  Pipfile  README.md  pyproject.toml
fplug/src/fplug/: __init__.py  about.py  utils.py
fsearch/: Cargo.toml
fsearch-core/: Cargo.toml  README.md
fsearch-core/defaults/: config.toml  style.css
fsearch-core/defaults/plugins/: app-lancher.toml
fsearch-core/src/: lib.rs
fsearch-daemon/: Cargo.toml
fsearch/defaults/: config.toml  style.css
fsearch/defaults/plugins/: ls.toml
fsearch/src/: cli.rs  completion.rs  exec.rs  main.rs  plugin.rs  utils.rs
src/: app.rs  args.rs  bus.rs  cli.rs  completion.rs  conf.rs  config.rs  exec.rs  icons.rs  main.rs  resources.rs  search.rs  style.css  ui.rs  utils.rs
