[package]
name = "fsearch"
version = "0.0.1"
edition = "2021"
authors = ["luxluth <delphin.blehoussi93@gmail.com>"]
description = " A spotlight like search util for linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.4"
copypasta = "0.10.0"
dbus = "0.9.7"
exmex = "0.18.0"
open = "5.0.0"
relm4 = "0.6.2"
relm4-components = "0.6.2"
relm4-icons = { version = "0.6.0", features = ["loupe"] }
time = { version = "0.3.30", features = ["macros"] }

