[package]
name = "seekr"
version = "0.0.1"
edition = "2021"
description = " A spotlight like search util for linux"
license = "MIT"
repository = "https://github.com/luxluth/fsearch"
readme = "../README.md"
homepage = "https://github.com/luxluth/fsearch"
categories = ["tools"]
keywords = ["fsearch", "spotlight", "gui"]
authors = ["luxluth <delphin.blehoussi93@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exmex = "0.20.3"
gtk = { version = "0.9.1", package = "gtk4", features = ["v4_14"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dbus = "0.9.7"
