[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fplug"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "luxluth", email = "delphin.blehoussi93@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/luxluth/fplug#readme"
Issues = "https://github.com/unknown/fplug/issues"
Source = "https://github.com/unknown/fplug"

[tool.hatch.version]
path = "src/fplug/__about__.py"