[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fplug"
dynamic = ["version"]
description = 'fsearch command line to install fsearch plugins'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "luxluth", email = "delphin.blehoussi93@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/luxluth/fsearch/tree/main/fplug#readme"
Issues = "https://github.com/luxluth/fsearch/issues"
Source = "https://github.com/luxluth/fsearch/tree/main/fplug"

[tool.hatch.version]
path = "src/fplug/about.py"

[project.scripts]
fplug = "fplug:app"