[package]
name = "fsearch-core"
version = "0.0.10"
edition = "2021"
description = "The core library for fsearch"
license = "MIT"
repository = "https://github.com/luxluth/fsearch/tree/main/fsearch-core"
readme = "README.md"
homepage = "https://github.com/luxluth/fsearch/tree/main/fsearch-core#readme"
categories = ["development-tools"]
keywords = ["fsearch", "plugins", "core", "library"]
authors = ["luxluth <delphin.blehoussi93@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
toml = "0.8.11"
