[package]
name = "fsearch"
version = "0.0.1"
edition = "2021"
authors = ["luxluth <delphin.blehoussi93@gmail.com>"]
description = " A spotlight like search util for linux"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fsearch-core = { path = "../fsearch-core", version = "*" }
clap = { version = "4.5.2", features = ["derive"] }
clap_complete = "4.5.1"
copypasta = { version = "0.10.1", features = ["wayland"] }
dbus = "0.9.7"
exmex = "0.19.0"
open = "5.0.0"
relm4 = "0.8.1"
relm4-components = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.34", features = ["macros"] }
toml = "0.8.11"
serde_json = "1.0.114"
smithay-clipboard = "0.7.1"
